language/move-lang/tests/move_check/parser/ability_modifier_trailing_comma.move
address 0x42 {
module M {
    // invalid trailing comma
    struct Foo has copy, drop, {}
}
}
